Attempt to fix page height on Safari iOS

--- a/published/index.css
+++ b/published/index.css
@@ -1,17 +1,20 @@
 :root,
 body {
     --color-accent: #ff8243;
-    --color-footer: rgba(0%, 0%, 0%, 30%);
-
-    min-height: 100vh;
+    --color-footer-border: rgba(0%, 0%, 0%, 30%);
 }
 
 @media (prefers-color-scheme: dark) {
-
     :root,
     body {
-        --color-footer: rgba(100%, 100%, 100%, 30%);
+        --color-footer-border: rgba(100%, 100%, 100%, 30%);
     }
+}
+
+:root {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
 
 body {
@@ -20,7 +23,7 @@ body {
     justify-content: center;
     align-items: center;
     margin: 0;
-    padding-top: 10vh;
+    flex-grow: 1;
     box-sizing: border-box;
     font-family: sans-serif;
     text-align: center;
@@ -28,6 +31,7 @@ body {
 
 main {
     padding: 1em;
+    padding-top: 10vh;
     flex-grow: 1;
 }
 
@@ -43,8 +47,7 @@ a {
 .footer {
     width: 100%;
     height: 8em;
-    /* background: var(--color-footer); */
-    border-top: 1px solid var(--color-footer);
+    border-top: 1px solid var(--color-footer-border);
 }
 
 .footer nav,
